# scribe-api-client

./: .gitignore  Cargo.toml  LICENSE-MIT
crates/scribe-client/: Cargo.toml
crates/scribe-client-ffi/: Cargo.toml
crates/scribe-client-ffi/src/: lib.rs
crates/scribe-client-ffi/tests/: channel_test.rs
crates/scribe-client-py/: Cargo.toml  README.md  pyproject.toml
crates/scribe-client-py/examples/: pkce_flow.py
crates/scribe-client-py/src/: lib.rs
crates/scribe-client-py/tests/: conftest.py  test_auth.py  test_channel.py  test_client.py  test_pkce_and_tokens.py  test_settings.py
crates/scribe-client/examples/: pkce_flow.rs
crates/scribe-client/src/: auth.rs  channel.rs  client.rs  error.rs  lib.rs  model.rs
crates/scribe-client/tests/: auth_test.rs  channel_test.rs  client_test.rs  settings_test.rs
crates/uniffi-bindgen/: Cargo.toml
scripts/: build-ios.sh
