[workspace]
resolver = "2"
members = [
    "crates/scribe-client",
    "crates/scribe-client-py",
    "crates/scribe-client-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PneumaSolutions/scribe-api-client"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
