[package]
name = "scribe-client-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI bindings for the Scribe API client (iOS / Android)"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "scribe_client_ffi"

[lints]
workspace = true

[dependencies]
scribe_client_core = { package = "scribe-client", path = "../scribe-client" }
uniffi = "0.29"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
thiserror = "1"
time = "0.3"
url = "2"
serde_json = "1"
