[package]
name = "scribe-client-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI bindings for the Scribe API client (iOS / Android)"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "scribe_client_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
uniffi-cli = ["uniffi/cli"]

[lints]
workspace = true

[dependencies]
scribe_client_core = { package = "scribe-client", path = "../scribe-client" }
uniffi = "=0.32.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "multipart", "native-tls"] }
thiserror = "=2.0.18"
time = "=0.3.53"
url = "=2.5.8"
serde_json = "=1.0.150"

[dev-dependencies]
futures-util = { version = "=0.3.32", default-features = false, features = ["sink"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = { version = "=0.29.0", features = ["native-tls"] }
