[package]
name = "scribe-client-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings (PyO3) for scribe-client"

[lib]
name = "scribe_client"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
scribe_client_core = { package = "scribe-client", path = "../scribe-client" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
pythonize = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
