[package]
name = "scribe-client-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings (PyO3) for scribe-client"

[lib]
name = "scribe_client"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
scribe_client_core = { package = "scribe-client", path = "../scribe-client" }
pyo3 = { version = "=0.29.0", features = ["extension-module", "abi3-py39"] }
pythonize = "=0.29.0"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "multipart", "native-tls"] }
serde_json = "=1.0.150"
time = "=0.3.53"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }
url = "=2.5.8"
