[package]
name = "scribe-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client for the Scribe document conversion API"

[dependencies]
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
